[package]
name = "conv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
reqwest = {version = "0.11.9", features = ["blocking"]}
tokio = {version = "1.15.0", features = ["full"]}
anyhow = "1.0.52"
wkhtmltopdf = "0.4.0"